--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,9 +1,19 @@
 $rootBGC: hsl(210, 13%, 95%);
-$rootBGC_dark: hsl(210, 2%, 24%);
+$rootBGC_darkM: hsl(210, 2%, 24%);
+$contentBGC: #fff;
+$contentBGC_darkM: hsl(210, 4%, 32%);
+$contentBGC_focus: hsl(210, 16%, 92%);
+$contentBGC_focus_darkM: hsl(210, 4%, 46%);
+$boxShadowC: hsla(210, 17%, 88%, 0.16);
+$boxShadowC_darkM: hsla(210, 5%, 24%, 0.16);
 $textC: hsl(210, 4%, 26%);
+$textC_darkM: hsl(210, 20%, 98%);
+$textGrayC: hsl(210, 5%, 60%);
+$textGrayC_darkM: hsl(210, 5%, 70%);
+$mainWeakC: hsl(210, 77%, 90%);
+$mainWeakC_darkM: hsl(210, 40%, 50%);
 $mainC: hsl(210, 90%, 80%);
-$mainWeakC: hsl(210, 74%, 91%);
-$whiteC: #fff;
+$mainC_darkM: hsl(210, 50%, 60%);
 
 @font-face {
   font-family: 'icc0n';
@@ -17,18 +27,30 @@ $whiteC: #fff;
   background-color: $rootBGC;
   height: 100%;
 
-  &.t_dark {
-    background-color: $rootBGC_dark;
+  @media (prefers-color-scheme: dark) {
+    & {
+      background-color: $rootBGC_darkM;
+    }
   }
 }
 
 body {
   color: $textC;
-  font-family: sans-serif;
+  font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
   height: 100%;
   line-height: 1.875;
   margin: 0;
   padding: 0;
+
+  @media (prefers-color-scheme: dark) {
+    & {
+      color: $textC_darkM;
+    }
+  }
+
+  @media screen and (min-width: 2400px) {
+    font-size: 1.5rem;
+  }
 }
 
 main {
@@ -48,7 +70,8 @@ a {
 .l_in {
   margin-left: auto;
   margin-right: auto;
-  width: 33%;
+  width: 46.154%;
+  max-width: 1400px;
 }
 
 .l_flex {
@@ -57,55 +80,49 @@ a {
   flex-wrap: wrap;
 }
 
-.header_wrap {
-  background-color: $whiteC;
-  border-bottom: 2px solid $mainC;
-  margin-bottom: 3.5rem;
-}
+.header {
+  &_wrap {
+    background-color: $contentBGC;
+    border-bottom: 2px solid $mainC;
+    flex-direction: column;
+    margin-bottom: 3.5rem;
 
-.header_logotype {
-  height: 1rem;
-}
+    @media (prefers-color-scheme: dark) {
+      & {
+        background-color: $contentBGC_darkM;
+        border-bottom-color: $mainC_darkM;
+      }
+    }
+  }
 
-.theme_toggler__wrap {
-  margin-left: auto;
-}
+  &_brand {
+    align-items: stretch;
+  }
 
-#theme_toggler__btn {
-  opacity: 0;
-  position: absolute;
-}
+  &_logotype {
+    &,
+    &__invert {
+      height: 1rem;
+    }
 
-.theme_toggler__label {
-  box-sizing: border-box;
-  background-color: $rootBGC_dark;
-  border-radius: 48px;
-  cursor: pointer;
-  justify-content: space-between;
-  line-height: 0;
-  padding: 4px 5px;
-  position: relative;
-  height: 24px;
-  width: 48px;
-}
+    &__invert {
+      display: none;
+    }
 
-.theme_toggler__handle {
-  background-color: $whiteC;
-  border-radius: 50%;
-  position: absolute;
-  top: 2px;
-  left: 26px;
-  height: 20px;
-  width: 20px;
-  transition: transform 0.2s linear;
+    @media (prefers-color-scheme: dark) {
+      & {
+        display: none;
 
-  #theme_toggler__btn:checked ~ .theme_toggler__label > & {
-    transform: translateX(-24px);
+        &__invert {
+          display: block;
+        }
+      }
+    }
   }
 }
 
 .g_nav_wrap {
-  margin-left: 0.75rem;
+  margin-left: auto;
 }
 
 #g_nav_ctrl {
@@ -117,6 +134,7 @@ a {
 
 .g_nav_label {
   display: none;
+  margin-left: auto;
   padding: 0.125rem 0;
 }
 
@@ -136,8 +154,8 @@ a {
     border-radius: 50%;
     content: '\e900';
     font-size: 0.875em;
-    margin-left: 0.188em;
-    padding: 0.313em;
+    margin-inline-start: 0.25em;
+    padding: 0.35em;
     transform: rotate(90deg);
     transition: transform 0.15s ease-out, background-color 0.15s ease-out;
 
@@ -146,18 +164,14 @@ a {
     }
 
     #g_nav_ctrl:focus ~ .g_nav_label > & {
-      background-color: #e6eaed;
+      background-color: $contentBGC_focus;
+
+      @media (prefers-color-scheme: dark) {
+        & {
+          background-color: $contentBGC_focus_darkM;
+        }
+      }
     }
-  }
-
-  &__theme_default::before {
-    color: #f39c12;
-    content: '\e902';
-  }
-
-  &__theme_dark::before {
-    color: #f1c40f;
-    content: '\e901';
   }
 
   &__prev_top_arrow::before {
@@ -206,8 +220,14 @@ a {
   text-decoration: none;
 
   &:hover {
-    background-color: #e6eaed;
+    background-color: $contentBGC_focus;
     transition: background-color 0.15s ease-out;
+
+    @media (prefers-color-scheme: dark) {
+      & {
+        background-color: $contentBGC_focus_darkM;
+      }
+    }
   }
 }
 
@@ -216,7 +236,13 @@ a {
 }
 
 .weak_shadow {
-  box-shadow: 0 1px 6px 2px rgba(220, 225, 230, 0.16);
+  box-shadow: 0 1px 6px 2px $boxShadowC;
+
+  @media (prefers-color-scheme: dark) {
+    & {
+      box-shadow: 0 1px 6px 2px $boxShadowC_darkM;
+    }
+  }
 }
 
 .main_visual {
@@ -224,9 +250,15 @@ a {
 
   &_padding {
     align-items: stretch;
-    background-color: $whiteC;
+    background-color: $contentBGC;
     margin: 0 0 3rem 3px;
     padding: 2rem 1.5rem;
+
+    @media (prefers-color-scheme: dark) {
+      & {
+        background-color: $contentBGC_darkM;
+      }
+    }
 
     &::before {
       background-color: $mainC;
@@ -235,6 +267,12 @@ a {
       height: auto;
       transform: translateX(-1.688rem);
       width: 6px;
+
+      @media (prefers-color-scheme: dark) {
+        & {
+          background-color: $mainC_darkM;
+        }
+      }
     }
   }
 
@@ -263,20 +301,32 @@ a {
   margin: 1.25rem 0;
 
   &_target {
-    background-color: $whiteC;
+    background-color: $contentBGC;
     flex-wrap: nowrap;
     padding: 0.438rem 1rem 0.125rem 1.5rem;
     text-decoration: none;
+
+    @media (prefers-color-scheme: dark) {
+      & {
+        background-color: $contentBGC_darkM;
+      }
+    }
   }
 
   &_category {
-    background-color: #d7e8fa;
+    background-color: $mainWeakC;
     display: inline-block;
     padding: 0.125rem 0.75rem;
     position: relative;
     top: 0.75rem;
     left: 0.75rem;
     text-decoration: none;
+
+    @media (prefers-color-scheme: dark) {
+      & {
+        background-color: $mainWeakC_darkM;
+      }
+    }
   }
 
   &_title {
@@ -288,7 +338,7 @@ a {
 }
 
 .article_links {
-  margin: 2.5rem 0;
+  margin: 1.25rem 0 2.5rem;
 }
 
 .article_link {
@@ -298,7 +348,13 @@ a {
   }
 
   &_title {
-    border-right: 2px solid #e6eaed;
+    border-right: 2px solid $contentBGC_focus;
+
+    @media (prefers-color-scheme: dark) {
+      & {
+        border-right-color: $contentBGC_focus_darkM;
+      }
+    }
   }
 }
 
@@ -308,11 +364,17 @@ a {
   &__current,
   &__link,
   &__link__num {
-    background-color: $whiteC;
+    background-color: $contentBGC;
     font-size: 1.25rem;
     padding: 0.75rem 0.938rem;
     margin: 0 0.375rem;
     text-decoration: none;
+
+    @media (prefers-color-scheme: dark) {
+      & {
+        background-color: $contentBGC_darkM;
+      }
+    }
   }
 
   &__current {
@@ -321,16 +383,126 @@ a {
 }
 
 .footer_wrap {
-  background-color: $whiteC;
+  background-color: $contentBGC;
   border-top: 2px solid $mainC;
   padding: 1rem;
   margin-top: 5rem;
   text-align: center;
+
+  @media (prefers-color-scheme: dark) {
+    & {
+      background-color: $contentBGC_darkM;
+      border-top-color: $mainC_darkM;
+    }
+  }
 }
 
 .copyright {
   margin-left: 3rem;
   text-align: center;
+}
+
+/* Style for only article page */
+
+.article {
+  background-color: $contentBGC;
+  margin-top: 3rem;
+  padding: 0.5rem 1.5rem;
+
+  @media (prefers-color-scheme: dark) {
+    & {
+      background-color: $contentBGC_darkM;
+    }
+  }
+
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-bottom: -0.75em;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+  }
+
+  h4 {
+    font-size: 1.125rem;
+  }
+
+  h5,
+  h6 {
+    font-size: 1.064rem;
+  }
+
+  p {
+    margin: 1rem 0;
+  }
+
+  ul {
+    margin-left: 0;
+    padding-left: 1.25rem;
+  }
+
+  table {
+    border-collapse: collapse;
+    border-top: 1px solid $textGrayC;
+    margin: 1rem 0;
+    width: 100%;
+
+    @media (prefers-color-scheme: dark) {
+      & {
+        border-top-color: $textGrayC_darkM;
+      }
+    }
+  }
+
+  tr {
+    border-bottom: 1px solid $textGrayC;
+
+    @media (prefers-color-scheme: dark) {
+      & {
+        border-bottom-color: $textGrayC_darkM;
+      }
+    }
+  }
+
+  th,
+  td {
+    padding: 0.125rem 0.5rem;
+  }
+
+  th {
+    text-align: left;
+  }
+
+  code {
+    font-size: 1.188rem;
+  }
+}
+
+.article_recom {
+  background-color: $contentBGC;
+  border-bottom: 2px solid $mainC;
+  margin: 5rem 0 1.25rem;
+  padding: 0.125rem 1.5rem;
+
+  @media (prefers-color-scheme: dark) {
+    & {
+      background-color: $contentBGC_darkM;
+      border-bottom-color: $mainC_darkM;
+    }
+  }
+
+  &_title {
+    font-size: 1.125rem;
+    font-weight: normal;
+  }
 }
 
 @media (max-width: 767px) {
@@ -346,7 +518,7 @@ a {
   }
 
   #g_nav_ctrl:checked ~ #g_nav {
-    background-color: $whiteC;
+    background-color: $contentBGC;
     border-top: 2px solid $mainC;
     display: flex;
     flex-direction: column;
@@ -355,10 +527,23 @@ a {
     width: max-content;
     z-index: 10000;
 
+    @media (prefers-color-scheme: dark) {
+      & {
+        background-color: $contentBGC_darkM;
+        border-top-color: $mainC_darkM;
+      }
+    }
+
     & .g_nav_item {
       border-left: 2px solid $mainC;
       padding: 0.5rem 1rem 0.5rem 0.625rem;
       min-width: 5rem;
+
+      @media (prefers-color-scheme: dark) {
+        & {
+          border-left-color: $mainC_darkM;
+        }
+      }
     }
   }
 
@@ -369,55 +554,5 @@ a {
 
   #g_nav {
     display: none;
-  }
-}
-
-/* Style for only article page */
-
-.article {
-  background-color: $whiteC;
-  margin-top: 3rem;
-  padding: 0.5rem 1.5rem;
-
-  p {
-    margin: 1rem 0;
-  }
-
-  table {
-    border-collapse: collapse;
-    margin: 1rem 0;
-    width: 100%;
-  }
-
-  thead {
-    border-top: 1px solid #515456;
-  }
-
-  tr {
-    border-bottom: 1px solid #515456;
-  }
-
-  th {
-    text-align: left;
-  }
-
-  td {
-    padding: 0.125rem 0.5rem;
-  }
-
-  code {
-    font-size: 1.188rem;
-  }
-}
-
-.article_recom {
-  background-color: $whiteC;
-  border-bottom: 2px solid $mainC;
-  margin: 5rem 0 1.25rem;
-  padding: 0.125rem 1.5rem;
-
-  &_title {
-    font-size: 1.125rem;
-    font-weight: normal;
   }
 }
