--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,5 +1,10 @@
 $rootBGC: hsl(210, 13%, 95%);
 $rootBGC_darkM: hsl(210, 2%, 24%);
+$textGrayC_darkM: hsl(210, 5%, 70%);
+$mainC: hsl(210, 90%, 80%);
+$mainC_darkM: hsl(210, 50%, 60%);
+$mainWeakC: hsl(210, 77%, 90%);
+$mainWeakC_darkM: hsl(210, 40%, 50%);
 $contentBGC: #fff;
 $contentBGC_darkM: hsl(210, 4%, 32%);
 $contentBGC_focus: hsl(210, 16%, 92%);
@@ -9,11 +14,10 @@ $boxShadowC_darkM: hsla(210, 5%, 24%, 0.16);
 $textC: hsl(210, 4%, 26%);
 $textC_darkM: hsl(210, 20%, 98%);
 $textGrayC: hsl(210, 5%, 60%);
-$textGrayC_darkM: hsl(210, 5%, 70%);
-$mainWeakC: hsl(210, 77%, 90%);
-$mainWeakC_darkM: hsl(210, 40%, 50%);
-$mainC: hsl(210, 90%, 80%);
-$mainC_darkM: hsl(210, 50%, 60%);
+$codeBGC: hsl(210, 10%, 90%);
+$codeBGC_darkM: hsl(210, 6%, 24%);
+$defListBGC: hsl(210, 90%, 90%);
+$defListBGC_darkM: hsl(210, 25%, 38%);
 
 @font-face {
   font-family: 'icc0n';
@@ -38,7 +42,7 @@ body {
   color: $textC;
   font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
   height: 100%;
-  line-height: 1.875;
+  line-height: 1.813;
   margin: 0;
   padding: 0;
 
@@ -421,7 +425,10 @@ a {
   h5,
   h6 {
     font-weight: normal;
-    margin: 1.25em 0 -0.5em;
+
+    &:not(:first-child) {
+      margin: 2em 0 -0.5em;
+    }
   }
 
   h2 {
@@ -482,12 +489,53 @@ a {
     text-align: left;
   }
 
-  code {
+  code,
+  samp,
+  kbd {
+    background-color: $codeBGC;
     font-size: 1.125rem;
+    padding: 0.25em 0.375em;
+
+    @media (prefers-color-scheme: dark) {
+      & {
+        background-color: $codeBGC_darkM;
+      }
+    }
+  }
+  
+  pre > code {
+    display: block;
+    font-size: 0.875rem;
+    padding: 1rem;
   }
 
-  pre > code {
-    font-size: 0.875rem;
+  dl {
+    margin: 1.5rem 0;
+
+    > div {
+      background-color: $defListBGC;
+      margin: 1rem 0;
+      padding: 1rem;
+
+      @media (prefers-color-scheme: dark) {
+        & {
+          background-color: $defListBGC_darkM;
+        }
+      }
+    }
+  }
+
+  dt {
+    font-size: 1.375rem;
+    margin-bottom: 0.5rem;
+
+    + dt {
+      margin-top: -0.5rem;
+    }
+  }
+
+  dd {
+    margin: 0.375rem 0;
   }
 }
 
