Change assets dir-tree.

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -21,7 +21,7 @@ $defListBGC_darkM: hsl(210, 25%, 38%);
 
 @font-face {
   font-family: 'icc0n';
-  src: url('../public/asset/font/icc0n.ttf?e18zeb') format('truetype'), url('../public/asset/font/icc0n.woff?e18zeb') format('woff'), url('../public/asset/font/icc0n.svg?e18zeb#icc0n') format('svg');
+  src: url('../public/font/icc0n.ttf?e18zeb') format('truetype'), url('../public/font/icc0n.woff?e18zeb') format('woff'), url('../public/font/icc0n.svg?e18zeb#icc0n') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
