--- a/styles/common.scss
+++ b/styles/common.scss
@@ -490,7 +490,7 @@ a {
 
   code,
   samp {
-    font-size: 1.125rem;
+    font-size: 1.125em;
     padding: 0.25em 0;
     word-break: break-all;
   }
